--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/next"
+      "src": "index.html",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/Assets/(.*)",
-      "dest": "/Assets/$1"
+      "src": "/(.*)",
+      "dest": "/$1"
     }
-  ],
-  "staticFiles": {
-    "directoryListing": false
-  }
+  ]
 }
